deleted unused photos, cited sources for icon and text copy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Role Call</title>
     <!-- Dice icon -->
-    <link rel="icon" href="img/dice.png" type="image/x-icon" />
+    <link rel="icon" href="img/dice.png" type="image/x-icon" title="d20 dice by Andrew Doane from the Noun Project"/>
     <!-- d20 dice by Andrew Doane from the Noun Project -->
 
     <!-- Font Awesome -->
@@ -557,7 +557,13 @@
               class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto"
               style="width: 60px"
             />
-            <p>At this time, we are testing prototypes with potential users!</p>
+
+            <p>Text copy taken from <a href="https://crawlr.app/" target="_blank">
+              <b class="deep-purple-text">Crawlr</b></a>. Crawlr is a real app,
+               this is just a template inspired by it. Check them out <a href="https://crawlr.app/" target="_blank">
+                <b class="deep-purple-text">here</b></a>!</p>
+
+                <p>d20 dice by Andrew Doane from the Noun Project</p>
           </div>
           <!--/.First column-->
 
