fixed text copy spelling errors

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 Currently, Role Call is a web-based mobile application that
                 connects tabletop RPG players with one another. No more sifting
                 through thousands of forum threads or irrelevant social media
-                posts to find your next campaign — Roll Call puts the info you
+                posts to find your next campaign — Role Call puts the info you
                 need to know in your hand.
               </p>
             </div>
