whoops one more copy error

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <h4 class="my-4 font-weight-bold">Find Players</h4>
               <p class="grey-text">
                 Make a player profile and start finding and private messaging
-                likeminded tabletop RPG players near you on Roll Call.
+                likeminded tabletop RPG players near you on Role Call.
               </p>
             </div>
             <!--Grid column-->
