added mailchimp landing page for users to subscribe

--- a/index.html
+++ b/index.html
@@ -484,9 +484,11 @@
             Stay up to date by joining our mailing list
           </p>
           <div class="text-center mt-4">
+            <a href="https://mailchi.mp/a15bfe1a2321/role-call-landing-page">
             <button class="btn btn-lg" id="subscribe-button">
               Subscribe
             </button>
+          </a>
           </div>
           <div class="buffer col-12"></div>
         </section>
